<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Scores app</string>
    <string name="library">Library</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="xyz">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="my_apps">My Nanodegree apps</string>
</resources>
