<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.faraday.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_apps"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/spotify_app_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify"
        android:layout_weight="1"
        android:background="#F08C35"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/scores_app_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:layout_weight="1"
        android:background="#F08C35"
        android:layout_marginTop="25dp"
        />

    <Button
        android:id="@+id/library_app_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:layout_weight="1"
        android:background="#F08C35"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/build_it_bigger_app_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:layout_weight="1"
        android:background="#F08C35"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/xyz_app_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyz"
        android:layout_weight="1"
        android:background="#F08C35"
        android:layout_marginTop="25dp"/>


    <Button
        android:id="@+id/capstone_app_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:background="@color/colorAccent"
        android:layout_weight="1"
        android:layout_marginTop="25dp"/>

</LinearLayout>
